# NeuralKoopmanSVD

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/: README.md  factory.py  run_analysis.py  run_post_inference.py  run_preprocessing.py  train.py
experiments/configs/: chignolin_schnet.py  default.py  mnist_cnn.py  synthetic_logistic.py
experiments/pipelines/: __init__.py  base.py  chignolin.py  mnist.py  synthetic.py
koopmansvd/: utils.py
koopmansvd/data/: __init__.py  base.py  collate.py  context.py  io.py  molecular.py  utils.py
koopmansvd/models/: __init__.py  lightning.py  losses.py  metrics.py
koopmansvd/models/encoders/: __init__.py  base.py  cnn.py  embedding.py  mlp.py  molecular.py  wrappers.py
koopmansvd/models/inference/: __init__.py  estimator.py  linalg.py
koopmansvd/systems/: __init__.py  base.py  logistic.py
scripts/: common.sh  preprocess_chignolin.sh  run_chignolin.sh  run_chignolin_all.sh  run_continue_training.sh  run_logistic.sh  run_orderedmnist.sh  run_tests.sh
tests/: test_components.py  test_datasets.py  test_encoders.py  test_estimator.py  test_losses.py  test_svals_ddp_decomposition.py
